    reflects if the postmaster process is running.
    https://www.postgresql.org/message-id/20171111205316.u56lkmkakdmcx6zm%40msg.df7cb.de
  * supported-versions: Version 10 on Ubuntu 18.04 (bionic). (Closes: #881501)
  * debian/maintscripts-functions: bump update-alternatives priority of
    version 1x to 1x0.
  * Unsupport 9.2 on apt.postgresql.org.

 -- Christoph Berg <myon@debian.org>  Fri, 10 Nov 2017 17:45:10 +0100

postgresql-common (188) unstable; urgency=medium

  * pg_ctlcluster, pg_createcluster, pg_upgradecluster: Use lchown instead
    of chown to mitigate privilege escalation via symlinks. (CVE-2017-8806.
    Related to CVE-2017-12172 in PostgreSQL; extends our earlier fix for
    CVE-2016-1255.)
  * dh_make_pgxs: Add options to set package name and version.
  * pg_lsclusters: Raise error when called on a specific cluster that does not
    exist. This was the behavior before the "accept dead postgresql.conf
    symlinks" change, but not coded explicitly.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 08 Nov 2017 16:03:19 +0100

postgresql-common (187) unstable; urgency=medium

  * Consistently call psql -X. (Closes: #877920)
  * Update pt translation, thanks Ricardo Silva! (Closes: #872430)
  * pg_virtualenv: Drop "BUG" message that really just means that
    pg_createcluster threw an error.
  * pg_createcluster: Drop new cluster if --start was requested and starting
    fails.
  * pg_createcluster: If not running as postgres or root, don't attempt to
    install config and data parent directories with owner postgres.
  * pg_lsclusters, postgresql-generator, get_version_clusters, cluster_info,
    read_conf_file: Accept dead postgresql.conf symlinks, filesystem might not
    be mounted yet.
  * pg_virtualenv: Fix version comparison when determining newest PG major.
  * pg_updatedicts, postgresql-common.postinst: Create tsearch dictionaries on
    first install and set umask for correct permissions. (Closes: #868232)